--- a/dmit-1530-assignment-1-start/css/styles.css
+++ b/dmit-1530-assignment-1-start/css/styles.css
@@ -3,15 +3,262 @@
     --blue-grey-100: #CFD8DC;
     --blue-grey-200: #B0BEC5;
     --blue-grey-900: #263238;
+    --blue-grey-800: #37474F;
+    --header-footer: #111111;
+    --white: #ffffff;
+    --blue-grey-400: #78909C;
 }
 
 body {
     color: #000;
     text-align: center; 
+    font-family: "Inter", sans-serif;
 }
 
-header, footer {
-    background-color: var(--blue-grey-50);
+header, 
+footer {
+    /* background-color: var(--blue-grey-50); */
+    background-color: var(--header-footer);
     color: #fff;
-    padding: 2rem 4rem;   
+    padding: 2rem 0 1rem;
+    margin: 0;
+}
+
+.header-logo {
+    display: flex;
+    font-size: 3.5rem;
+    justify-content: center;
+    align-items: baseline;
+    gap: 0;
+}
+
+.header-logo img {
+    height: 3.5rem;
+    width: auto;
+}
+
+.navigation {
+    list-style-type: none;
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    font-size: 1rem;
+    padding: 0;
+}
+
+.navigation a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+button {
+    background-color: var(--header-footer);
+    color: var(--white);
+    padding: 0.7rem 1rem;
+    border-radius: 6px;
+    margin: 1rem 0 2rem;
+}
+
+section {
+    padding: 2rem;
+    margin: 0;
+}
+
+.subsection {
+    padding: 0;
+    margin: 0;
+}
+
+section img {
+    border-radius: 10px;
+}
+
+section ul {
+    padding: 1rem;
+    padding-top: 0;
+}
+
+section li {
+    padding-bottom: 1rem;
+}
+
+.intro {
+    background-color: var(--blue-grey-50);
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.break-symbol {
+    font-size: 2.5rem;
+    display: block;
+    padding-top: 3rem;
+    line-height: 3.375rem;
+}
+
+.subsection .break-symbol {
+    padding-top: 0;
+}
+
+h1,
+.footer-logo {
+    font-family: 'Libre Baskerville', serif !important;
+}
+
+h2,
+h3 {
+    margin-top: 0;
+    padding-top: 0;
+}
+
+h2 {
+    font-size: 2.25rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h3 {
+    font-size: 1.25rem;
+}
+
+p {
+    font-size: 1rem;
+}
+
+.quote {
+    background-color: var(--blue-grey-400);
+    color: var(--white);
+    margin: 0;
+}
+
+.quote h2,
+.quote2 h2 {
+    font-weight: 100;
+}
+
+.quote2 h2 {
+    padding-top: 2rem;
+}
+
+.container {
+    background-color: var(--blue-grey-100);
+}
+
+.inner-container {
+    text-align: left;
+}
+
+.inner-container section {
+    margin: 0;
+    padding: 0;
+}
+
+.sign-up {
+    background-color: var(--blue-grey-800);
+    padding: 4rem 2rem;
+}
+
+.sign-up div {
+    background-color: var(--white);
+    padding: 1rem;
+    padding-top: 3rem;
+    border-radius: 8px;
+}
+
+.gallery-intro,
+.gallery-description,
+.feature-highlights {
+    text-align: left;
+}
+
+.gallery-intro {
+    background-color: var(--blue-grey-50);
+}
+
+.gallery-intro h2 {
+    text-align: center;
+}
+
+.gallery-intro h3 {
+    padding-top: 3rem;
+    padding-bottom: 1rem;
+}
+
+.gallery-description {
+    background-color: var(--blue-grey-400);
+    color: var(--white);
+}
+
+.gallery-description h2,
+.feature-highlights h2 {
+    font-weight: 100;
+}
+
+.feature-highlights {
+    background-color: var(--blue-grey-800);
+    color: var(--white);
+}
+
+footer {
+    text-align: left;
+}
+
+.footer-logo {
+    display: flex;
+    font-size: 3.5rem;
+    justify-content: left;
+    align-items: baseline;
+    gap: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.footer-logo img {
+    height: 3.5rem;
+    width: auto;
+    border-radius: 0;
+}
+
+.footer-banner p {
+    font-size: 0.75rem;
+    padding-top: 0;
+    color: var(--blue-grey-200);
+}
+
+.footer-nav {
+    display: flex;
+    padding: 0;
+    padding-left: 1rem;
+    margin: 0;
+    justify-content: left;
+    gap: 1.5rem;
+}
+
+.footer-nav ul {
+    list-style-type: none;
+    text-align: left;
+    max-width: 8rem;
+}
+
+.footer-nav li {
+    line-height: 1.125rem;
+}
+
+.footer-nav li:first-child {
+    font-size: 1rem;
+}
+
+.footer-nav li:not(:first-child) {
+    font-size: 0.75rem;
+}
+
+.footer-nav a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+.disclaimer {
+    font-size: 0.75rem;
+    color: var(--blue-grey-200);
+    padding: 0 2rem;
+    padding-bottom: 4rem;
+    text-align: center;
 }
